# nanocrew

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  core_agent_lines.sh  docker-compose.yml  pyproject.toml
nanobot/agent/: loop.py  manager.py  registry.py  subagent.py
nanobot/agent/tools/: cron.py
nanobot/bus/: events.py
nanobot/channels/: discord.py  feishu.py  manager.py  telegram.py
nanobot/cli/: commands.py
nanobot/config/: loader.py  migration.py  schema.py
nanobot/cron/: service.py  types.py
nanobot/session/: manager.py
nanobot/utils/: helpers.py
nanocrew/: __init__.py  __main__.py
nanocrew/agent/: __init__.py  context.py  loop.py  manager.py  memory.py  registry.py  skills.py  subagent.py
nanocrew/agent/tools/: __init__.py  cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
nanocrew/bus/: __init__.py  events.py  queue.py
nanocrew/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py
nanocrew/cli/: commands.py
nanocrew/config/: __init__.py  events.py  loader.py  migration.py  schema.py  watcher.py
nanocrew/cron/: __init__.py  service.py  types.py
nanocrew/heartbeat/: __init__.py
nanocrew/providers/: __init__.py  litellm_provider.py  transcription.py
nanocrew/session/: __init__.py  manager.py
nanocrew/skills/: README.md
nanocrew/skills/agent-creator/: SKILL.md
nanocrew/skills/cron/: SKILL.md
nanocrew/skills/github/: SKILL.md
nanocrew/skills/summarize/: SKILL.md
nanocrew/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
nanocrew/utils/: __init__.py  events.py  file_cache.py  helpers.py
tests/: test_cli_input.py  test_commands.py  test_consolidate_offset.py  test_dynamic_agent_creation.py  test_email_channel.py  test_event_bus.py  test_file_cache.py  test_file_watcher.py  test_tool_validation.py
tests/agent/: test_hot_reload.py  test_manager.py  test_registry.py  test_session_binding.py  test_workspace.py
(+4 files in other folders)
